# SfCompressor

./: CMakeLists.txt  README.md
.github/workflows/: test-linux.yml
benchmarks/: CMakeLists.txt  main.cc  sf_benchmarks.cc
benchmarks/sf/: sf_benchmarks.cc
examples/: CMakeLists.txt  broken_big_matrix.csv  broken_matrix.csv  example.cc
original/: CMakeLists.txt  Calchelper.h  Convert_IO.h  Helper.h  Quelltext.cpp  Reserve.h
sf_compressor/: sf_compressor.h  utils.h
sources/: sf_compressor.cc  sf_compressor.cpp  utils.h
src/: CMakeLists.txt
src/sf/: sf_compressor.cpp
test/: CMakeLists.txt
test/sf/: sf_compressor_test.cc
tests/: CMakeLists.txt  main.cc  sf_compressor_test.cc
